--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
             <li class="nav-item">
                 <a class="nav-link" id="aes-tab" data-toggle="tab" href="#aesTool" role="tab" aria-controls="aesTool" aria-selected="false">AES加解密</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" id="base64-tab" data-toggle="tab" href="#base64Tool" role="tab" aria-controls="base64Tool" aria-selected="false">Base64编码</a>
+            </li>
         </ul>
 
         <!-- 标签页内容 -->
@@ -102,6 +105,23 @@
                 <div class="form-group mt-3">
                     <label for="aesOutput">结果:</label>
                     <textarea id="aesOutput" class="form-control" rows="3" readonly></textarea>
+                </div>
+            </div>
+
+            <!-- Base64工具 -->
+            <div class="tab-pane fade" id="base64Tool" role="tabpanel" aria-labelledby="base64-tab">
+                <h3>Base64编码/解码</h3>
+                <div class="form-group">
+                    <label for="base64Input">输入文本:</label>
+                    <textarea id="base64Input" class="form-control" rows="3" placeholder="输入需要编码/解码的文本"></textarea>
+                </div>
+                <div class="btn-group">
+                    <button class="btn btn-primary mr-2" onclick="encodeBase64()">编码</button>
+                    <button class="btn btn-secondary" onclick="decodeBase64()">解码</button>
+                </div>
+                <div class="form-group mt-3">
+                    <label for="base64Output">结果:</label>
+                    <textarea id="base64Output" class="form-control" rows="3" readonly></textarea>
                 </div>
             </div>
         </div>
@@ -167,6 +187,30 @@
                 document.getElementById('aesOutput').value = result;
             } catch (e) {
                 alert('解密失败：' + e.message);
+            }
+        }
+
+        // Base64编码
+        function encodeBase64() {
+            var input = document.getElementById('base64Input').value;
+            try {
+                // 使用 btoa 进行 Base64 编码
+                var encoded = btoa(unescape(encodeURIComponent(input)));
+                document.getElementById('base64Output').value = encoded;
+            } catch (e) {
+                alert('编码失败：' + e.message);
+            }
+        }
+
+        // Base64解码
+        function decodeBase64() {
+            var input = document.getElementById('base64Input').value;
+            try {
+                // 使用 atob 进行 Base64 解码
+                var decoded = decodeURIComponent(escape(atob(input)));
+                document.getElementById('base64Output').value = decoded;
+            } catch (e) {
+                alert('解码失败：' + e.message);
             }
         }
     </script>
