--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
                 <a class="nav-link active" id="md5-tab" data-toggle="tab" href="#md5Tool" role="tab" aria-controls="md5Tool" aria-selected="true">MD5加密</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="sha256-tab" data-toggle="tab" href="#sha256Tool" role="tab" aria-controls="sha256Tool" aria-selected="false">SHA256</a>
+                <a class="nav-link" id="sha256-tab" data-toggle="tab" href="#sha256Tool" role="tab" aria-controls="sha256Tool" aria-selected="false">SHA256加密</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" id="sha512-tab" data-toggle="tab" href="#sha512Tool" role="tab" aria-controls="sha512Tool" aria-selected="false">SHA512</a>
+                <a class="nav-link" id="sha512-tab" data-toggle="tab" href="#sha512Tool" role="tab" aria-controls="sha512Tool" aria-selected="false">SHA512加密</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" id="des-tab" data-toggle="tab" href="#desTool" role="tab" aria-controls="desTool" aria-selected="false">DES加解密</a>
