--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="zh-CN" data-lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- 多语言支持 -->
+    <link rel="alternate" hreflang="zh-CN" href="https://wetool.dpdns.org/">
+    <link rel="alternate" hreflang="en" href="https://wetool.dpdns.org/?lang=en">
+    <link rel="alternate" hreflang="x-default" href="https://wetool.dpdns.org/">
     
     <!-- 资源预加载 -->
     <link rel="preload" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" as="style">
